feat: add Ayman's logistical regression

--- a/newest_version_ml_international.ipynb
+++ b/newest_version_ml_international.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "max           281.590000     97.600000      1.000000  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "1           0.898230        0.526549                 0.345133  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -2507,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -2913,7 +2913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2940,7 +2940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3137,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -3191,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3205,7 +3205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -3262,7 +3262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -3310,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -3345,6 +3345,210 @@
     "\n",
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(y_test, y_pred_best))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Logistical Regression "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Logistic regression is a statistical model that is used to make a binary decision. This means that it helps to distinguish between two possible outcomes, e.g. in our case, it is about predicting whether a person will suffer a stroke (1) or not (0) based on certain information (e.g. age, glucose level, etc).\n",
+    "#### **How does the model work?**\n",
+    "\n",
+    "**Inputs:** We have several characteristics (also called features), such as age, glucose level and BMI. These values are numbers and are given as inputs to the model.\n",
+    "\n",
+    "**Calculating the weighting:** Each characteristic has a certain importance, which is determined by so-called \"weights\". The model multiplies each characteristic by a weight and adds everything together. The result is a number that roughly shows how likely it is that the result is 1 or 0.\n",
+    "\n",
+    "**Sigmoid function:** This number is then converted into a probability between 0 and 1 using the logistic function (also known as the sigmoid function). This function ensures that all values fall into the range 0 to 1, which corresponds to a probability."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Sigmoid-Function} = \\frac{1}{1 + e^{-z}} $$\n",
+    "\n",
+    "*z = the sum of the weighted characteristics*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **What is the loss function?**\n",
+    "\n",
+    "The loss function measures how well or poorly the model works. The smaller the loss, the better the model works. In logistic regression, we use a special loss function called \"Log-Loss\".\n",
+    "E.g. if the model predicts for a person that the probability of a stroke is 90%, but the person does not have a stroke, this is a bad prediction and the **loss is high**.\n",
+    "If the model predicts 90% probability for a person and the person actually has a stroke, then the **loss is small** because the prediction was good.\n",
+    "The goal is to minimize the loss for the entire model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Log-Loss} = - \\frac{1}{N} \\sum_{i=1}^{N} \\left[ y_i \\log(p_i) + (1 - y_i) \\log(1 - p_i) \\right] $$\n",
+    "\n",
+    "\\( y_i \\) *represents the actual labels (either 0 or 1).* \n",
+    "\n",
+    "\\( p_i \\) *the predicted probability for class 1.*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **What is gradient descent in this context?**\n",
+    "\n",
+    "Gradient Descent is the method we use to find the best weights for our logistic regression model. The goal is to **minimize the loss function (log-loss)**, which measures how far off the model’s predictions are from the actual values.\n",
+    "\n",
+    "**Simple calculation example:**\n",
+    "Let’s say we are predicting whether someone has a stroke based on just age. We start with a random weight, say $\\theta = 0.5$, for age.\n",
+    "\n",
+    "For one data point, say a 60-year-old person, we calculate $z$, the weighted sum of the input:\n",
+    "$$\n",
+    "z = \\theta \\times \\text{age} = 0.5 \\times 60 = 30\n",
+    "$$\n",
+    "\n",
+    "Then we apply the **sigmoid function** to get the probability (prediction):\n",
+    "\n",
+    "$$\n",
+    "h_\\theta(x) = \\frac{1}{1 + e^{-z}} = \\frac{1}{1 + e^{-30}} \\approx 1\n",
+    "$$\n",
+    "\n",
+    "So, our model predicts a probability close to 1 (very likely stroke).\n",
+    "\n",
+    "**Next steps:**\n",
+    "\n",
+    "1. **Calculating the loss:**\n",
+    "If the actual outcome is $y = 0$ (no stroke), we calculate the loss using the log-loss function:\n",
+    "\n",
+    "$$\n",
+    "J(\\theta) = -[y \\log(h_\\theta(x)) + (1 - y) \\log(1 - h_\\theta(x))]\n",
+    "$$\n",
+    "\n",
+    "Since $y = 0$, the loss becomes very large because the model predicted the wrong outcome:\n",
+    "\n",
+    "$$\n",
+    "J(\\theta) \\approx -[0 \\times \\log(1) + (1 - 0) \\log(0)] = \\infty\n",
+    "$$\n",
+    "\n",
+    "2. **Calculating the gradient:**\n",
+    "The gradient shows how much to adjust $\\theta$. The gradient for $\\theta$ is:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial J(\\theta)}{\\partial \\theta} = (h_\\theta(x) - y) \\times \\text{age}\n",
+    "$$\n",
+    "\n",
+    "which equals:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial J(\\theta)}{\\partial \\theta} = (1 - 0) \\times 60 = 60\n",
+    "$$\n",
+    "\n",
+    "2. **Updating the weights:**\n",
+    "We adjust $\\theta$ using the gradient and a learning rate $\\alpha$ (say $\\alpha = 0.01$):\n",
+    "\n",
+    "$$\n",
+    "\\theta := \\theta - \\alpha \\times \\frac{\\partial J(\\theta)}{\\partial \\theta}\n",
+    "$$\n",
+    "\n",
+    "So, the new value of $\\theta$ becomes:\n",
+    "\n",
+    "$$\n",
+    "\\theta := 0.5 - 0.01 \\times 60 = -0.1\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **What are the forms of regularization that apply to this model?**\n",
+    "\n",
+    "There are two main forms of regularization that apply to logistic regression:\n",
+    "\n",
+    "1. **L1 Regularization (\"Lasso\")**:\n",
+    "- This type of regularization adds a penalty to the model based on the absolute values of the coefficients. It tends to push some coefficients to zero, effectively removing less important features from the model. This helps with feature selection.\n",
+    "\n",
+    "- The penalty term for L1 regularization is:\n",
+    "\n",
+    "$$ \\text{Penalty} = \\lambda \\sum |\\theta_j| $$\n",
+    "\n",
+    "2. **L2 Regularization (\"Ridge\")**:\n",
+    "- L2 regularization adds a penalty proportional to the square of the coefficients. Unlike L1, it doesn’t eliminate features but instead reduces the magnitude of all the coefficients, making the model less sensitive to small variations in the data.\n",
+    "\n",
+    "- The penalty term for L2 regularization is:\n",
+    "\n",
+    "$$ \\text{Penalty} = \\frac{\\lambda}{2} \\sum \\theta_j^2 $$\n",
+    "\n",
+    "Both of these methods help reduce overfitting by preventing the model from becoming too complex."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **How does regularization relate to overfitting?**\n",
+    "\n",
+    "Overfitting happens when a model learns not just the meaningful relationships between the features and the target but also the noise (e.g. errors, outliers,..) in the training data. Regularization helps prevent this by penalizing large coefficients.\n",
+    "\n",
+    "- **L1 regularization** eliminates unimportant features by pushing their coefficients to zero, reducing the complexity of the model.\n",
+    "- **L2 regularization** keeps all the features but reduces the size of the coefficients, making the model simpler and less prone to fitting the noise in the training data.\n",
+    "\n",
+    "Simply put, regularization helps the model perform better on new, unseen data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **At which hyperparameters does the model give the best results?**\n",
+    "\n",
+    "The main hyperparameter for regularization is *C*. It controls how strong the regularization is. A **larger *C* value means less regularization**, so the model can fit the training data more closely. A **smaller *C* value increases regularization**, shrinking the coefficients and helping prevent overfitting.\n",
+    "\n",
+    "To find the best C-value, you can either use cross-validation tools like *GridSearchCV* to automatically find the optimal value or manually experiment with different values like *C= 0.1, 1.0, 10, 100,..* and see which one gives the best results for your model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.76      0.70      0.72       102\n",
+      "           1       0.73      0.78      0.75       105\n",
+      "\n",
+      "    accuracy                           0.74       207\n",
+      "   macro avg       0.74      0.74      0.74       207\n",
+      "weighted avg       0.74      0.74      0.74       207\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# Adding regularization: L2 & C=1.0 are the defaults\n",
+    "lr = LogisticRegression(penalty='l2',C=1.0, class_weight='balanced') # \"class weighting\" technique for imbalanced data\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "#Making predictions\n",
+    "y_pred = lr.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   }
  ],
